# sotastream

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
docs/: .gitignore  Makefile  README.md  conf.py  index.rst  introduction.rst
sotastream/: __init__.py  __main__.py  cli.py  data.py
sotastream/augmentors/: __init__.py  augmentors.py
sotastream/filters/: filters.py
sotastream/pipelines/: __init__.py  base.py  default.py  example_pipeline.py  mtdata_pipeline.py  multistream_pipeline.py
sotastream/utils/: phrases.py  split.py
test/: dummy_pipeline.py  test_augmentors.py  test_filter.py  test_line.py  test_pipeline.py
test/regression/: .gitignore  Makefile  README.md  run.sh  test_mtdata.py  test_multistream.py
test/regression/tests/pipelines/: default.expected  example.expected  test_default_pipeline.sh  test_example_pipeline.sh
